# api/src/controller/audio_bibles.rs
@@ -11,13 +11,16 @@ use crate::{
     app::state::AppState,
     controller::error::ServiceErrorExt,
     models::http::{
-        params::audio_bibles::{
-            audio_bible::AudioBibleQueryParams,
-            books::BookPathParams,
-            chapters::{AudioChapterPathParams, ChaptersPathParams},
+        params::{
+            audio_bibles::{
+                books::BookPath,
+                chapters::{AudioChapterPath, ChaptersPath},
+            },
+            common::BibleQuery as AudioBibleQuery,
         },
-        response::audio_bibles::{
-            audio_bibles::GetAudioBiblesRes, books::GetAudioBooksRes, chapters::GetAudioChaptersRes,
+        response::{
+            audio_bibles::audio_bibles::AudioBible,
+            common::{BooksCountResponse, ChaptersCountResponse},
         },
     },
 };
@@ -42,15 +45,15 @@ pub fn get_audio_bible_routes() -> Router<AppState> {
 #[utoipa::path(
     get,
     path = "/audio_bibles",
-    params(AudioBibleQueryParams),
+    params(AudioBibleQuery),
     responses(
-        (status = 200, body = GetAudioBiblesRes)
+        (status = 200, body = Vec<AudioBible>)
     )
 )]
 pub async fn get_audio_bibles(
     State(app_state): State<AppState>,
-    Query(params): Query<AudioBibleQueryParams>,
-) -> Result<Json<GetAudioBiblesRes>, axum::response::Response> {
+    Query(params): Query<AudioBibleQuery>,
+) -> Result<Json<Vec<AudioBible>>, axum::response::Response> {
     let audio_bible_service = &app_state.audio_bible_service;
     let language = params.language;
     let version = params.version;
@@ -58,53 +61,53 @@ pub async fn get_audio_bibles(
         .get_audio_bibles(language, version)
         .await
         .into_axum_response()?;
-    Ok(Json(GetAudioBiblesRes { audio_bibles }))
+    Ok(Json(audio_bibles))
 }
 
 #[utoipa::path(
     get,
     path = "/audio_bibles/{audio_bible_id}/books",
-    params(BookPathParams),
+    params(BookPath),
     responses(
-        (status = 200, body = GetAudioBooksRes)
+        (status = 200, body = BooksCountResponse)
     )
 )]
 pub async fn get_audio_bible_books(
     State(app_state): State<AppState>,
-    Path(params): Path<BookPathParams>,
-) -> Result<Json<GetAudioBooksRes>, axum::response::Response> {
+    Path(params): Path<BookPath>,
+) -> Result<Json<BooksCountResponse>, axum::response::Response> {
     let audio_bible_service = &app_state.audio_bible_service;
     let num_books = audio_bible_service
         .get_audio_bible_books(params.audio_bible_id)
         .await
         .into_axum_response()?;
-    Ok(Json(GetAudioBooksRes { num_books }))
+    Ok(Json(BooksCountResponse { num_books }))
 }
 
 #[utoipa::path(
     get,
     path = "/audio_bibles/{audio_bible_id}/books/{book_num}/chapters",
-    params(ChaptersPathParams),
+    params(ChaptersPath),
     responses(
-        (status = 200, body = GetAudioChaptersRes)
+        (status = 200, body = ChaptersCountResponse)
     )
 )]
 pub async fn get_audio_bible_chapters(
     State(app_state): State<AppState>,
-    Path(params): Path<ChaptersPathParams>,
-) -> Result<Json<GetAudioChaptersRes>, axum::response::Response> {
+    Path(params): Path<ChaptersPath>,
+) -> Result<Json<ChaptersCountResponse>, axum::response::Response> {
     let audio_bible_service = &app_state.audio_bible_service;
     let num_chapters = audio_bible_service
         .get_audio_bible_chapters(params.audio_bible_id, params.book_num)
         .await
         .into_axum_response()?;
-    Ok(Json(GetAudioChaptersRes { num_chapters }))
+    Ok(Json(ChaptersCountResponse { num_chapters }))
 }
 
 #[utoipa::path(
     get,
     path = "/audio_bibles/{audio_bible_id}/books/{book_num}/chapters/{chapter_num}",
-    params(AudioChapterPathParams),
+    params(AudioChapterPath),
     responses(
         (status = 200, description = "Returns the audio chapter file", content_type = "audio/mpeg"),
         (status = 404, description = "Audio Chapter not found", body = String)
@@ -112,7 +115,7 @@ pub async fn get_audio_bible_chapters(
 )]
 pub async fn get_audio_chapter(
     State(app_state): State<AppState>,
-    Path(params): Path<AudioChapterPathParams>,
+    Path(params): Path<AudioChapterPath>,
 ) -> Result<Response<Body>, axum::response::Response> {
     let audio_bible_service = &app_state.audio_bible_service;
     let object_output = audio_bible_service
