# api/src/controller/swagger.rs
@@ -6,7 +6,8 @@ use crate::controller::{
     },
     bibles::{
         __path_get_bible_books, __path_get_bible_chapters, __path_get_bible_verse_by_number,
-        __path_get_bible_verses, __path_get_bibles,
+        __path_get_bible_verses, __path_get_bibles, __path_get_random_bible_verse,
+        __path_get_verse_of_the_day,
     },
     health::__path_get_health,
 };
@@ -22,6 +23,8 @@ use utoipa_swagger_ui::SwaggerUi;
     get_bible_chapters,
     get_bible_verses,
     get_bible_verse_by_number,
+    get_random_bible_verse,
+    get_verse_of_the_day,
     get_audio_bibles,
     get_audio_bible_books,
     get_audio_bible_chapters,
