# api/src/models/http/response/audio_bibles/books.rs
@@ -1,7 +1,0 @@
-use serde::Serialize;
-use utoipa::ToSchema;
-
-#[derive(Debug, Serialize, ToSchema)]
-pub struct GetAudioBooksRes {
-    pub num_books: i64,
-}
