# api/src/models/http/response/bibles/chapters.rs
@@ -1,7 +1,0 @@
-use serde::Serialize;
-use utoipa::ToSchema;
-
-#[derive(Debug, Serialize, ToSchema)]
-pub struct GetBibleChaptersRes {
-    pub num_chapters: i64,
-}
